# complex-rock

./: .gitignore  README.md  pyproject.toml
apps/basic-app-examples/: basic-app-example-dash.py  basic-app-example-panel.py  basic-app-example-shiny.py  basic-app-example-streamlit.py
apps/cool-app-shiny/www/: pyvis.html
apps/my-app-shiny/: app.py
scripts/: example_geoviews.py  graphs-011225.ipynb  graphs-correction.ipynb
slides/: _0.qmd  _0_introduction.qmd  _1.qmd  _1_dataviz.qmd  _2_dataapp.qmd  slides.html  slides.qmd  styles.scss
slides/slides_files/libs/bootstrap/: bootstrap.min.css
src/: example_dash.py  example_panel.py  example_panel_complex.py  example_streamlit.py  test.py
